modify the interrupt handler

--- a/讀我.md
+++ b/讀我.md
@@ -4,9 +4,11 @@
 
 - [x] Create and destroy the Child process.
 - [x] Virtio supported.
-- [ ] Implementation on Disk and FileSystem.
+- [x] Modify the interrupt vector (為了支援除了 Timer interrupt 以外的中斷).
+- [ ] PLIC supported.
+- [ ] Shell.
 - [ ] Spinlock.
-- [ ] Shell. (希望有生之年做得到啦...)
+- [ ] Implementation on Disk and FileSystem.
 
 ## Reference
 
